--- a/E-State/EState.UI/wwwroot/EState/about-us.html
+++ b/E-State/EState.UI/wwwroot/EState/about-us.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="phone-number d-flex">
                     <div class="icon">
-                        <img src="img/icons/phone-call.png" alt="">
+                        <img src="~/Admin/img/icons/phone-call.png" alt="">
                     </div>
                     <div class="number">
                         <a href="tel:+45 677 8993000 223">+45 677 8993000 223</a>
@@ -52,7 +52,7 @@
                 <nav class="classy-navbar justify-content-between" id="southNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+                    <a class="nav-brand" href="index.html"><img src="~/Admin/img/core-img/logo.png" alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -153,7 +153,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img" style="background-image: url(img/bg-img/hero1.jpg);">
+    <section class="breadcumb-area bg-img" style="background-image: url(~/Admin/img/bg-img/hero1.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -402,7 +402,7 @@
                         <p>Suspendisse dictum enim sit amet libero</p>
                     </div>
                     <div class="about-content">
-                        <img class="wow fadeInUp" data-wow-delay="350ms" src="img/bg-img/about.jpg" alt="">
+                        <img class="wow fadeInUp" data-wow-delay="350ms" src="~/Admin/img/bg-img/about.jpg" alt="">
                         <p class="wow fadeInUp" data-wow-delay="450ms">Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada. Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.</p>
                     </div>
                 </div>
@@ -431,7 +431,7 @@
                             <!-- Property Content -->
                             <div class="property-content">
                                 <h5>Villa in Los Angeles</h5>
-                                <p class="location"><img src="img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
+                                <p class="location"><img src="~/Admin/img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
                                 <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
                                 <div class="property-meta-data d-flex align-items-end justify-content-between">
                                     <div class="new-tag">
@@ -469,7 +469,7 @@
                             <!-- Property Content -->
                             <div class="property-content">
                                 <h5>Town House in Los Angeles</h5>
-                                <p class="location"><img src="img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
+                                <p class="location"><img src="~/Admin/img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
                                 <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
                                 <div class="property-meta-data d-flex align-items-end justify-content-between">
                                     <div class="new-tag">
@@ -507,7 +507,7 @@
                             <!-- Property Content -->
                             <div class="property-content">
                                 <h5>Villa in Los Angeles</h5>
-                                <p class="location"><img src="img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
+                                <p class="location"><img src="~/Admin/img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
                                 <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
                                 <div class="property-meta-data d-flex align-items-end justify-content-between">
                                     <div class="new-tag">
@@ -545,7 +545,7 @@
                             <!-- Property Content -->
                             <div class="property-content">
                                 <h5>Town House in Los Angeles</h5>
-                                <p class="location"><img src="img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
+                                <p class="location"><img src="~/Admin/img/icons/location.png" alt="">Upper Road 3411, no.34 CA</p>
                                 <p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada.</p>
                                 <div class="property-meta-data d-flex align-items-end justify-content-between">
                                     <div class="new-tag">
@@ -574,7 +574,7 @@
     <!-- ##### About Content Wrapper End ##### -->
 
     <!-- ##### Call To Action Area Start ##### -->
-    <section class="call-to-action-area bg-fixed bg-overlay-black" style="background-image: url(img/bg-img/cta.jpg)">
+    <section class="call-to-action-area bg-fixed bg-overlay-black" style="background-image: url(~/Admin/img/bg-img/cta.jpg)">
         <div class="container h-100">
             <div class="row align-items-center h-100">
                 <div class="col-12">
@@ -612,13 +612,13 @@
                         <!-- Team Member Info -->
                         <div class="team-member-info">
                             <div class="section-heading">
-                                <img src="img/icons/prize.png" alt="">
+                                <img src="~/Admin/img/icons/prize.png" alt="">
                                 <h2>Jeremy Scott</h2>
                                 <p>Realtor</p>
                             </div>
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> office@template.com</h6>
+                                <h6><img src="~/Admin/img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
+                                <h6><img src="~/Admin/img/icons/envelope.png" alt=""> office@template.com</h6>
                             </div>
                         </div>
                     </div>
@@ -633,13 +633,13 @@
                         <!-- Team Member Info -->
                         <div class="team-member-info">
                             <div class="section-heading">
-                                <img src="img/icons/prize.png" alt="">
+                                <img src="~/Admin/img/icons/prize.png" alt="">
                                 <h2>Maria Williams</h2>
                                 <p>Realtor</p>
                             </div>
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> office@template.com</h6>
+                                <h6><img src="~/Admin/img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
+                                <h6><img src="~/Admin/img/icons/envelope.png" alt=""> office@template.com</h6>
                             </div>
                         </div>
                     </div>
